# KnovasComponents

./: .gitignore  README.md  RELEASE_NOTES.md
KnovasPlatform/components/docbridge_integration/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
RemoteController/: .env.example  .gitignore  .rc-sync-state.db  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.corpus.yml  docker-compose.internal.yml  docker-compose.winjur.yml  docker-compose.yml  pyproject.toml
RemoteController/config/: remote_controller_sync.example.json  remote_controller_sync.winjur.example.json
RemoteController/contracts/: discover_response.schema.json  remote_controller_sync_config.schema.json  sync_request.schema.json  sync_response.schema.json
RemoteController/data/docs/: hello.txt
RemoteController/docs/: README.md  SETUP.md  configuration.md  local-commands.md  local-setup.md  network-and-firewall.md  nginx-edge.example.conf  onboarding-checklist.md  operations.md
RemoteController/docs/hosting/: GETTING_STARTED.md  configuration.md  installation.md  network-and-firewall.md  onboarding-checklist.md  operations.md  server_01_home-corpus-setup.md
RemoteController/examples/: sync-request-corpus.json  sync-request-winjur.json  sync-request.json
RemoteController/scripts/: install_tenant_certs.sh  setup_server_corpus.sh  ssh_helper.py  upload_and_rebuild.sh
RemoteController/src/: app.py  config.py
RemoteController/src/auth/: cert_identity.py  jwt_identity.py  knovas_verify_client.py  mtls.py  rc_rate_limit.py
RemoteController/tests/: conftest.py  helpers.py
(+114 files in other folders)
