[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docbridge-integration"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "knovas_api: tests requiring real Knovas API connectivity (skipped by default)",
]
